--- a/package.json
+++ b/package.json
@@ -4,9 +4,36 @@
   "description": "React Hook Form validation module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "scripts": {"build": "tsc"},
-  "keywords": ["react", "form", "validation"],
+  "scripts": {
+    "build": "tsc",
+    "test": "jest --coverage"
+  },
+  "keywords": [
+    "react",
+    "form",
+    "validation"
+  ],
   "author": "Modsynth Team",
   "license": "MIT",
-  "peerDependencies": {"react": "^18.0.0", "react-hook-form": "^7.0.0", "zod": "^3.0.0"}
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-hook-form": "^7.0.0",
+    "zod": "^3.0.0"
+  },
+  "devDependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.0.6",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.54.2",
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3",
+    "zod": "^3.24.1"
+  }
 }
