--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "ts-jest": "^29.4.5",
     "typescript": "^5.9.3",
     "zod": "^3.24.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
