--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,13 @@
-{"compilerOptions": {"target": "ES2020", "module": "ESNext", "declaration": true, "outDir": "./dist", "strict": true, "moduleResolution": "node", "esModuleInterop": true}}
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "declaration": true,
+    "outDir": "./dist",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx", "node_modules", "dist"]
+}
